# crispr-transcriptomics-pipeline

./: .gitignore  README.md  SETUP_CHECKLIST.md  main.py  pyproject.toml  requirements.txt  run_full_pipeline.py  run_l1000.py
