[project]
name = "perturbation-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cmappy>=4.0.1",
    "kaleido>=1.2.0",
    "matplotlib>=3.10.8",
    "openai>=2.12.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "python-decouple>=3.8",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "weasyprint>=67.0",
]
